chore: Fix gulpfile

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -10,5 +10,26 @@
 
  <body>
   <h1>UI catalog</h1>
+
+  <div>
+   <h2>Colors</h2>
+
+   <div>
+    <div class="ui_box height_md width_5xl red"></div>
+    <div class="ui_box height_md width_5xl red_lighten_5"></div>
+    <div class="ui_box height_md width_5xl red_lighten_4"></div>
+    <div class="ui_box height_md width_5xl red_lighten_3"></div>
+    <div class="ui_box height_md width_5xl red_lighten_2"></div>
+    <div class="ui_box height_md width_5xl red_lighten_1"></div>
+    <div class="ui_box height_md width_5xl red_darken_1"></div>
+    <div class="ui_box height_md width_5xl red_darken_2"></div>
+    <div class="ui_box height_md width_5xl red_darken_3"></div>
+    <div class="ui_box height_md width_5xl red_darken_4"></div>
+    <div class="ui_box height_md width_5xl red_accent_1"></div>
+    <div class="ui_box height_md width_5xl red_accent_2"></div>
+    <div class="ui_box height_md width_5xl red_accent_3"></div>
+    <div class="ui_box height_md width_5xl red_accent_4"></div>
+   </div>
+  </div>
  </body>
 </html>
