chore: Update UI catalog

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -32,7 +32,7 @@
     </section>
  
     <section>
-     <h2 class="ui_heading h2">Buttons</h2>
+     <h2 class="ui_heading h2">Button</h2>
      <div>
       <h2 class="ui_heading h3">Basic</h2>
       <div class="flex flex_row flex_align_center flex_gap_lg">
@@ -118,6 +118,215 @@
         <button class="ui_button primary no_rounded">Square Button</button>
         <button class="ui_button primary no_rounded outlined">Square Button</button>
        </div>
+      </div>
+     </div>
+    </section>
+ 
+    <section>
+     <h2 class="ui_heading h2">Button Group</h2>
+     <div>
+      <h2 class="ui_heading h3">Basic</h2>
+      <div class="flex flex_column flex_align_start flex_gap_lg">
+       <div class="ui_button_group primary text">
+        <button>Text Button 1</button>
+        <button>Text Button 2</button>
+        <button>Text Button 3</button>
+       </div>
+       <div class="ui_button_group primary">
+        <button>Filled Button 1</button>
+        <button>Filled Button 2</button>
+        <button>Filled Button 3</button>
+       </div>
+       <div class="ui_button_group primary outlined">
+        <button>Outlined Button 1</button>
+        <button>Outlined Button 2</button>
+        <button>Outlined Button 3</button>
+       </div>
+      </div>
+     </div>
+
+     <div>
+      <h2 class="ui_heading h3">Disabled</h2>
+      <div class="flex flex_column flex_align_start flex_gap_lg">
+       <div class="ui_button_group primary text">
+        <button disabled>Text Button 1</button>
+        <button>Text Button 2</button>
+        <button>Text Button 3</button>
+       </div>
+       <div class="ui_button_group primary">
+        <button disabled>Filled Button 1</button>
+        <button>Filled Button 2</button>
+        <button>Filled Button 3</button>
+       </div>
+       <div class="ui_button_group primary outlined">
+        <button disabled>Outlined Button 1</button>
+        <button>Outlined Button 2</button>
+        <button>Outlined Button 3</button>
+       </div>
+      </div>
+
+     <div>
+      <h2 class="ui_heading h3">Sizes</h2>
+      <div class="flex flex_column flex_align_start flex_gap_lg">
+       <div class="ui_button_group primary small">
+        <button>Small Button 1</button>
+        <button>Small Button 2</button>
+        <button>Small Button 3</button>
+       </div>
+       <div class="ui_button_group primary">
+        <button>Medium Button 1</button>
+        <button>Medium Button 2</button>
+        <button>Medium Button 3</button>
+       </div>
+       <div class="ui_button_group primary large">
+        <button>Large Button 1</button>
+        <button>Large Button 2</button>
+        <button>Large Button 3</button>
+       </div>
+      </div>
+     </div>
+
+     <div>
+      <h2 class="ui_heading h3">Colors</h2>
+      <div class="flex flex_column flex_align_start flex_gap_lg">
+       <div class="flex flex_row flex_align_center flex_gap_lg">
+        <div class="ui_button_group primary text">
+         <button>Primary Button 1</button>
+         <button>Primary Button 2</button>
+         <button>Primary Button 3</button>
+        </div>
+        <div class="ui_button_group primary">
+         <button>Primary Button 1</button>
+         <button>Primary Button 2</button>
+         <button>Primary Button 3</button>
+        </div>
+        <div class="ui_button_group primary outlined">
+         <button>Primary Button 1</button>
+         <button>Primary Button 2</button>
+         <button>Primary Button 3</button>
+        </div>
+       </div>
+
+       <div class="flex flex_row flex_align_center flex_gap_lg">
+        <div class="ui_button_group secondary text">
+         <button>Secondary Button 1</button>
+         <button>Secondary Button 2</button>
+         <button>Secondary Button 3</button>
+        </div>
+        <div class="ui_button_group secondary">
+         <button>Secondary Button 1</button>
+         <button>Secondary Button 2</button>
+         <button>Secondary Button 3</button>
+        </div>
+        <div class="ui_button_group secondary outlined">
+         <button>Secondary Button 1</button>
+         <button>Secondary Button 2</button>
+         <button>Secondary Button 3</button>
+        </div>
+       </div>
+
+       <div class="flex flex_row flex_align_center flex_gap_lg">
+        <div class="ui_button_group error text">
+         <button>Error Button 1</button>
+         <button>Error Button 2</button>
+         <button>Error Button 3</button>
+        </div>
+        <div class="ui_button_group error">
+         <button>Error Button 1</button>
+         <button>Error Button 2</button>
+         <button>Error Button 3</button>
+        </div>
+        <div class="ui_button_group error outlined">
+         <button>Error Button 1</button>
+         <button>Error Button 2</button>
+         <button>Error Button 3</button>
+        </div>
+       </div>
+
+       <div class="flex flex_row flex_align_center flex_gap_lg">
+        <div class="ui_button_group warning text">
+         <button>Warning Button 1</button>
+         <button>Warning Button 2</button>
+         <button>Warning Button 3</button>
+        </div>
+        <div class="ui_button_group warning">
+         <button>Warning Button 1</button>
+         <button>Warning Button 2</button>
+         <button>Warning Button 3</button>
+        </div>
+        <div class="ui_button_group warning outlined">
+         <button>Warning Button 1</button>
+         <button>Warning Button 2</button>
+         <button>Warning Button 3</button>
+        </div>
+       </div>
+
+       <div class="flex flex_row flex_align_center flex_gap_lg">
+        <div class="ui_button_group info text">
+         <button>Info Button 1</button>
+         <button>Info Button 2</button>
+         <button>Info Button 3</button>
+        </div>
+        <div class="ui_button_group info">
+         <button>Info Button 1</button>
+         <button>Info Button 2</button>
+         <button>Info Button 3</button>
+        </div>
+        <div class="ui_button_group info outlined">
+         <button>Info Button 1</button>
+         <button>Info Button 2</button>
+         <button>Info Button 3</button>
+        </div>
+       </div>
+
+       <div class="flex flex_row flex_align_center flex_gap_lg">
+        <div class="ui_button_group success text">
+         <button>Success Button 1</button>
+         <button>Success Button 2</button>
+         <button>Success Button 3</button>
+        </div>
+        <div class="ui_button_group success">
+         <button>Success Button 1</button>
+         <button>Success Button 2</button>
+         <button>Success Button 3</button>
+        </div>
+        <div class="ui_button_group success outlined">
+         <button>Success Button 1</button>
+         <button>Success Button 2</button>
+         <button>Success Button 3</button>
+        </div>
+       </div>
+      </div>
+     </div>
+
+     <div>
+      <h2 class="ui_heading h3">Vertical</h2>
+      <div class="flex flex_column flex_align_start flex_gap_lg">
+       <div class="ui_button_group vertical primary text">
+        <button>Text Button 1</button>
+        <button>Text Button 2</button>
+        <button>Text Button 3</button>
+       </div>
+       <div class="ui_button_group vertical primary">
+        <button>Filled Button 1</button>
+        <button>Filled Button 2</button>
+        <button>Filled Button 3</button>
+       </div>
+       <div class="ui_button_group vertical primary outlined">
+        <button>Outlined Button 1</button>
+        <button>Outlined Button 2</button>
+        <button>Outlined Button 3</button>
+       </div>
+      </div>
+     </div>
+    </section>
+
+    <section>
+     <h2 class="ui_heading h2">Checkbox</h2>
+     <div>
+      <h2 class="ui_heading h3">Basic</h2>
+      <div class="flex flex_row flex_align_start flex_gap_lg">
+       <input type="checkbox" class="ui_checkbox">
       </div>
      </div>
     </section>
