feat: Add checkbox component

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -327,6 +327,30 @@
       <h2 class="ui_heading h3">Basic</h2>
       <div class="flex flex_row flex_align_start flex_gap_lg">
        <input type="checkbox" class="ui_checkbox">
+       <input type="checkbox" class="ui_checkbox" checked>
+       <input type="checkbox" class="ui_checkbox" disabled>
+       <input type="checkbox" class="ui_checkbox" checked disabled>
+      </div>
+     </div>
+
+     <div>
+      <h2 class="ui_heading h3">Sizes</h2>
+      <div class="flex flex_row flex_align_start flex_gap_lg">
+       <input type="checkbox" class="ui_checkbox small">
+       <input type="checkbox" class="ui_checkbox">
+       <input type="checkbox" class="ui_checkbox large">
+      </div>
+     </div>
+
+     <div>
+      <h2 class="ui_heading h3">Colors</h2>
+      <div class="flex flex_row flex_align_start flex_gap_lg">
+       <input type="checkbox" class="ui_checkbox primary" checked>
+       <input type="checkbox" class="ui_checkbox secondary" checked>
+       <input type="checkbox" class="ui_checkbox error" checked>
+       <input type="checkbox" class="ui_checkbox warning" checked>
+       <input type="checkbox" class="ui_checkbox info" checked>
+       <input type="checkbox" class="ui_checkbox success" checked>
       </div>
      </div>
     </section>
