feat: Add floating button component

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -354,6 +354,124 @@
       </div>
      </div>
     </section>
+
+    <section>
+     <h2 class="ui_heading h2">Floating button</h2>
+     <div>
+      <h2 class="ui_heading h3">Basic</h2>
+      <div class="flex flex_row flex_align_center flex_gap_lg">
+       <button class="ui_floating_button primary">
+        <div class="ui_icon icon_plus"></div>
+       </button>
+       <button class="ui_floating_button primary">
+        <div class="ui_icon icon_plus"></div>
+        <span>Floating Button</span>
+       </button>
+      </div>
+     </div>
+     <div>
+      <h2 class="ui_heading h3">Disabled</h2>
+      <div class="flex flex_row flex_align_center flex_gap_lg" disabled>
+       <button class="ui_floating_button primary" disabled>
+        <div class="ui_icon icon_plus"></div>
+       </button>
+       <button class="ui_floating_button primary" disabled>
+        <div class="ui_icon icon_plus"></div>
+        <span>Floating Button</span>
+       </button>
+      </div>
+     </div>
+     <div>
+      <h2 class="ui_heading h3">Sizes</h2>
+      <div class="flex flex_column flex_align_start flex_gap_lg">
+       <div class="flex flex_row flex_align_center flex_gap_lg">
+        <button class="ui_floating_button primary small">
+         <div class="ui_icon icon_plus"></div>
+        </button>
+        <button class="ui_floating_button primary">
+         <div class="ui_icon icon_plus"></div>
+        </button>
+        <button class="ui_floating_button primary large">
+         <div class="ui_icon icon_plus"></div>
+        </button>
+       </div>
+
+       <div class="flex flex_row flex_align_center flex_gap_lg">
+        <button class="ui_floating_button primary small">
+         <div class="ui_icon icon_plus"></div>
+         <span>Small Floating Button</span>
+        </button>
+        <button class="ui_floating_button primary">
+         <div class="ui_icon icon_plus"></div>
+         <span>Medium Floating Button</span>
+        </button>
+        <button class="ui_floating_button primary large">
+         <div class="ui_icon icon_plus"></div>
+         <span>Large Floating Button</span>
+        </button>
+       </div>
+      </div>
+     </div>
+     <div>
+      <h2 class="ui_heading h3">Colors</h2>
+      <div class="flex flex_column flex_align_start flex_gap_lg">
+       <div class="flex flex_row flex_align_center flex_gap_lg">
+        <button class="ui_floating_button primary">
+         <div class="ui_icon icon_plus"></div>
+        </button>
+        <button class="ui_floating_button primary">
+         <div class="ui_icon icon_plus"></div>
+         <span>Primary Floating Button</span>
+        </button>
+       </div>
+       <div class="flex flex_row flex_align_center flex_gap_lg">
+        <button class="ui_floating_button secondary">
+         <div class="ui_icon icon_plus"></div>
+        </button>
+        <button class="ui_floating_button secondary">
+         <div class="ui_icon icon_plus"></div>
+         <span>Secondary Floating Button</span>
+        </button>
+       </div>
+       <div class="flex flex_row flex_align_center flex_gap_lg">
+        <button class="ui_floating_button error">
+         <div class="ui_icon icon_plus"></div>
+        </button>
+        <button class="ui_floating_button error">
+         <div class="ui_icon icon_plus"></div>
+         <span>Error Floating Button</span>
+        </button>
+       </div>
+       <div class="flex flex_row flex_align_center flex_gap_lg">
+        <button class="ui_floating_button warning">
+         <div class="ui_icon icon_plus"></div>
+        </button>
+        <button class="ui_floating_button warning">
+         <div class="ui_icon icon_plus"></div>
+         <span>Warning Floating Button</span>
+        </button>
+       </div>
+       <div class="flex flex_row flex_align_center flex_gap_lg">
+        <button class="ui_floating_button info">
+         <div class="ui_icon icon_plus"></div>
+        </button>
+        <button class="ui_floating_button info">
+         <div class="ui_icon icon_plus"></div>
+         <span>Info Floating Button</span>
+        </button>
+       </div>
+       <div class="flex flex_row flex_align_center flex_gap_lg">
+        <button class="ui_floating_button success">
+         <div class="ui_icon icon_plus"></div>
+        </button>
+        <button class="ui_floating_button success">
+         <div class="ui_icon icon_plus"></div>
+         <span>Success Floating Button</span>
+        </button>
+       </div>
+      </div>
+     </div>
+    </section>
    </main>
   </div>
 
