chore: Update UI catalog

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -472,6 +472,16 @@
       </div>
      </div>
     </section>
+
+    <section>
+     <h2 class="ui_heading h2">Radio</h2>
+     <div>
+      <h2 class="ui_heading h3">Basic</h2>
+      <div class="flex flex_row flex_align_center flex_gap_lg">
+       <input class="ui_radio">
+      </div>
+     </div>
+    </section>
    </main>
   </div>
 
