chore: Update UI catalog

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -14,7 +14,7 @@
  
    <div>
     <label>Chose Theme</label>
-    <select id="theme_select">
+    <select id="theme_select" class="ui_select">
      <option	value="theme_meower_light" selected>Meower Light</option>
      <option	value="theme_meower_dark">Meower Dark</option>
     </select>
@@ -503,6 +503,20 @@
        <input type="radio" class="ui_radio warning" name="ui_radio_warning" checked>
        <input type="radio" class="ui_radio info" name="ui_radio_info" checked>
        <input type="radio" class="ui_radio success" name="ui_radio_success" checked>
+      </div>
+     </div>
+    </section>
+
+    <section>
+     <h2 class="ui_heading h2">Select</h2>
+     <div>
+      <h2 class="ui_heading h3">Basic</h2>
+      <div class="flex flex_row flex_align_center flex_gap_lg">
+       <select class="ui_select">
+        <option>Option 1</option>
+        <option>Option 2</option>
+        <option>Option 3</option>
+       </select>
       </div>
      </div>
     </section>
