chore: Update UI catalog

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -327,6 +327,30 @@
         </div>
        </div>
       </div>
+
+      <div class="ui_box surface radius padding_lg">
+       <h4 class="ui_heading h4">Active</h2>
+       <div class="flex flex_column flex_align_start flex_gap_lg">
+        <div class="ui_button_group vertical primary text">
+         <button class="active">Text Button 1</button>
+         <button class="active">Text Button 2</button>
+         <button>Text Button 3</button>
+         <button>Text Button 4</button>
+        </div>
+        <div class="ui_button_group vertical primary">
+         <button class="active">Filled Button 1</button>
+         <button class="active">Filled Button 2</button>
+         <button>Filled Button 3</button>
+         <button>Filled Button 4</button>
+        </div>
+        <div class="ui_button_group vertical primary outlined">
+         <button class="active">Outlined Button 1</button>
+         <button class="active">Outlined Button 2</button>
+         <button>Outlined Button 3</button>
+         <button>Outlined Button 4</button>
+        </div>
+       </div>
+      </div>
      </section>
 
      <section class="flex flex_column flex_gap_xl">
