--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -14,6 +14,7 @@
     <aside class="ui_sidebar">
      <div class="ui_sidebar_inner">
       <div class="flex flex_column flex_gap_xl margin_right_md">
+       <div class="ui_heading h2">UI catalog</div>
        <div>
         <label>Chose Theme</label>
         <div class="ui_select">
