--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -3092,6 +3092,21 @@
              <td>Data 1-3</td>
              <td>Data 1-4</td>
              <td>Data 1-5</td>
+             <td>Data 1-6</td>
+             <td>Data 1-7</td>
+             <td>Data 1-8</td>
+             <td>Data 1-9</td>
+             <td>Data 1-10</td>
+             <td>Data 1-11</td>
+             <td>Data 1-12</td>
+             <td>Data 1-13</td>
+             <td>Data 1-14</td>
+             <td>Data 1-15</td>
+             <td>Data 1-16</td>
+             <td>Data 1-17</td>
+             <td>Data 1-18</td>
+             <td>Data 1-19</td>
+             <td>Data 1-20</td>
             </tr>
             <tr>
              <th>Header 2</th>
@@ -3100,6 +3115,21 @@
              <td>Data 2-3</td>
              <td>Data 2-4</td>
              <td>Data 2-5</td>
+             <td>Data 2-6</td>
+             <td>Data 2-7</td>
+             <td>Data 2-8</td>
+             <td>Data 2-9</td>
+             <td>Data 2-10</td>
+             <td>Data 2-11</td>
+             <td>Data 2-12</td>
+             <td>Data 2-13</td>
+             <td>Data 2-14</td>
+             <td>Data 2-15</td>
+             <td>Data 2-16</td>
+             <td>Data 2-17</td>
+             <td>Data 2-18</td>
+             <td>Data 2-19</td>
+             <td>Data 2-20</td>
             </tr>
             <tr>
              <th>Header 3</th>
@@ -3108,6 +3138,21 @@
              <td>Data 3-3</td>
              <td>Data 3-4</td>
              <td>Data 3-5</td>
+             <td>Data 3-6</td>
+             <td>Data 3-7</td>
+             <td>Data 3-8</td>
+             <td>Data 3-9</td>
+             <td>Data 3-10</td>
+             <td>Data 3-11</td>
+             <td>Data 3-12</td>
+             <td>Data 3-13</td>
+             <td>Data 3-14</td>
+             <td>Data 3-15</td>
+             <td>Data 3-16</td>
+             <td>Data 3-17</td>
+             <td>Data 3-18</td>
+             <td>Data 3-19</td>
+             <td>Data 3-20</td>
             </tr>
             <tr>
              <th>Header 4</th>
@@ -3116,6 +3161,21 @@
              <td>Data 4-3</td>
              <td>Data 4-4</td>
              <td>Data 4-5</td>
+             <td>Data 4-6</td>
+             <td>Data 4-7</td>
+             <td>Data 4-8</td>
+             <td>Data 4-9</td>
+             <td>Data 4-10</td>
+             <td>Data 4-11</td>
+             <td>Data 4-12</td>
+             <td>Data 4-13</td>
+             <td>Data 4-14</td>
+             <td>Data 4-15</td>
+             <td>Data 4-16</td>
+             <td>Data 4-17</td>
+             <td>Data 4-18</td>
+             <td>Data 4-19</td>
+             <td>Data 4-20</td>
             </tr>
             <tr>
              <th>Header 5</th>
@@ -3124,6 +3184,21 @@
              <td>Data 5-3</td>
              <td>Data 5-4</td>
              <td>Data 5-5</td>
+             <td>Data 5-6</td>
+             <td>Data 5-7</td>
+             <td>Data 5-8</td>
+             <td>Data 5-9</td>
+             <td>Data 5-10</td>
+             <td>Data 5-11</td>
+             <td>Data 5-12</td>
+             <td>Data 5-13</td>
+             <td>Data 5-14</td>
+             <td>Data 5-15</td>
+             <td>Data 5-16</td>
+             <td>Data 5-17</td>
+             <td>Data 5-18</td>
+             <td>Data 5-19</td>
+             <td>Data 5-20</td>
             </tr>
            </tbody>
           </table>
