feat: Add heading styles

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -2053,7 +2053,7 @@
         </div>
        </div>
 
-       <div class="ui_box surface radius padding_lg">
+       <div class="ui_box surface radius padding_lg flex flex_column flex_gap_md">
         <h4 class="ui_heading h4">Sticky header</h4>
         <div class="flex flex_column flex_align_start flex_gap_md">
          <div class="ui_box flex flex_row flex_align_center flex_gap_lg overflow_auto height_8xl">
@@ -2364,6 +2364,85 @@
          </div>
         </div>
        </div>
+
+       <div class="ui_box surface radius padding_lg overflow_auto_x flex flex_column flex_gap_md">
+        <h4 class="ui_heading h4">Divider Thickness</h4>
+        <div class="flex flex_column flex_align_stretch flex_gap_md">
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading divider thin">Heading</span>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading divider">Heading</span>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading divider thick">Heading</span>
+         </div>
+        </div>
+       </div>
+
+       <div class="ui_box surface radius padding_lg overflow_auto_x flex flex_column flex_gap_md">
+        <h4 class="ui_heading h4">Divider Colors</h4>
+        <div class="flex flex_column flex_align_stretch flex_gap_md">
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading divider primary">Heading</span>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading divider secondary">Heading</span>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading divider error">Heading</span>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading divider warning">Heading</span>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading divider info">Heading</span>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading divider success">Heading</span>
+         </div>
+        </div>
+       </div>
+
+       <div class="ui_box surface radius padding_lg overflow_auto_x flex flex_column flex_gap_md">
+        <h4 class="ui_heading h4">Bullet Thickness</h4>
+        <div class="flex flex_column flex_align_stretch flex_gap_md">
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading bullet thin">Heading</span>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading bullet">Heading</span>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading bullet thick">Heading</span>
+         </div>
+        </div>
+       </div>
+
+       <div class="ui_box surface radius padding_lg overflow_auto_x flex flex_column flex_gap_md">
+        <h4 class="ui_heading h4">Bullet Colors</h4>
+        <div class="flex flex_column flex_align_stretch flex_gap_md">
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading bullet primary">Heading</span>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading bullet secondary">Heading</span>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading bullet error">Heading</span>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading bullet warning">Heading</span>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading bullet info">Heading</span>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <span class="ui_heading bullet success">Heading</span>
+         </div>
+        </div>
+       </div>
+
       </section>
 
       <section class="flex flex_column flex_gap_xl">
